--- a/great-idea/css/index.scss
+++ b/great-idea/css/index.scss
@@ -18,6 +18,10 @@ h5 {
   margin-bottom: 15px;
 }
 
+img {
+  max-width: 100%;
+}
+
 p {
   font-size: 0.77rem;
   line-height: 1.1rem;
@@ -31,12 +35,13 @@ body {
 
 main {
   margin: 3rem 0;
+  padding: 1rem;
 }
 
 header#top {
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 1rem 0;
   position: fixed;
   top: 0;
@@ -49,30 +54,25 @@ header#top {
     font-size: 0.9em;
     color: #bebebe;
   }
-  > div {
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    img.logo {
-      position: relative;
-      top: 50%;
-      margin-top: -50%;
-    }
-  }
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  margin: 2rem 0;
 }
 
 section#hero {
-  font-size: 0;
+  flex: 1 0 50%;
   text-align: center;
+  justify-content: space-around;
+  align-items: center;
   > div {
-    margin: 1rem 0;
-    display: inline-table;
-    vertical-align: middle;
-    width: 50%;
+    margin: 3rem 0;
   }
   h1 {
     font-size: 72px;
+    max-width: 100%;
   }
   button {
     padding: 0.25rem 1rem;
@@ -83,40 +83,25 @@ section#hero {
   }
 }
 
+section.above-fold > article {
+  flex: 1 1 450px;
+}
+section.below-fold > article {
+  flex: 1 1 300px;
+}
+
 hr {
   clear: both;
   margin: 1rem 0;
   border: 1px solid #000;
 }
 
-section {
-  margin: 2rem 0;
-}
-
 article {
   padding-right: 1rem;
 }
 
-section.above-fold {
-  font-size: 0;
-  article {
-    font-size: 1rem;
-    display: inline-block;
-    width: 50%;
-  }
-}
-
 img.middle-img {
   width: 100%;
-}
-
-section.below-fold {
-  font-size: 0;
-  article {
-    font-size: 1rem;
-    display: inline-block;
-    width: 33%;
-  }
 }
 
 footer {
