--- a/great-idea/scss/services.scss
+++ b/great-idea/scss/services.scss
@@ -2,9 +2,12 @@ article {
   margin: 1rem 0;
 }
 
-section.services {
+section {
   display: flex;
   flex-wrap: wrap;
+}
+
+section.services {
   margin: 0 -1rem;
   article {
     flex: 1 1 300px;
@@ -27,6 +30,16 @@ section.services {
 
 section.facts {
   display: flex;
+  div {
+    flex: 1 1 300px;
+    margin: 1rem 0;
+    &.image-wrapper {
+      text-align: center;
+    }
+    p {
+      padding-right: 1rem;
+    }
+  }
   ul {
     list-style-type: disc;
     margin: 1rem;
